--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
 PORT=8080
-MONGODB_URI=mongodb://localhost:27017/board-service
 JWT_SECRET=your_jwt_secret_key
 NODE_ENV=development
+
+MONGODB_URI=mongodb+srv://dnwn7166:Bk7WAOESs0qyO18f@cluster0.drrfpcf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+FRONTEND_URL=http://localhost:3000
