docker compose setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,15 @@
-version: '3.8'
-
 services:
   backend:
-    build: ./backend
+    image: dnwn7166/board-backend:latest
     ports:
       - "8080:8080"
-    environment:
-      - NODE_ENV=production
-      - MONGODB_URI=mongodb+srv://dnwn7166:Bk7WAOESs0qyO18f@cluster0.drrfpcf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-      - JWT_SECRET=your_jwt_secret_here
+    env_file:
+      - ./backend/.env
     networks:
       - app-network
 
   frontend:
-    build: ./frontend
+    image: dnwn7166/board-frontend:latest
     ports:
       - "80:80"
     depends_on:
