--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
+PORT=8080
+JWT_SECRET=your_jwt_secret_key
+NODE_ENV=development
+
 MONGODB_URI=mongodb+srv://dnwn7166:Bk7WAOESs0qyO18f@cluster0.drrfpcf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=your_actual_jwt_secret_here
+FRONTEND_URL=http://localhost:3000
