--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "morgan": "^1.10.1",
+    "winston": "^3.17.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
