--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,8 +17,8 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log warn;
+    # Global error logging only
+    error_log /var/log/app/board-service/nginx/error.log warn;
 
     server {
         listen 80;
@@ -31,15 +31,31 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
 
+        # API Proxy Configuration - CRITICAL for security logging
+        location /api/ {
+            proxy_pass http://board-backend-service:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Log all API requests for security monitoring
+            access_log /var/log/app/board-service/nginx/access.log main;
+        }
+
         # Handle React Router
         location / {
             try_files $uri $uri/ /index.html;
+            # No logging here to prevent double logging with /api/ location
+            access_log /var/log/app/board-service/nginx/access.log main;
         }
 
         # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
+            # No logging for static assets to reduce noise
+            access_log off;
         }
 
         # Health check
