--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - namespace.yaml
 - configmap.yaml
 - secret.yaml
+- persistent-volume-claims.yaml
 - backend-deployment.yaml
 - backend-service.yaml
 - frontend-deployment.yaml
