--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -29,16 +29,22 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
-      # CORS settings
+      # CORS settings - Fixed for login issues
       - GF_SECURITY_ALLOW_EMBEDDING=true
       - GF_SECURITY_COOKIE_SAMESITE=none
       - GF_SECURITY_COOKIE_SECURE=false
       - GF_SERVER_ROOT_URL=http://localhost:3000
       - GF_SERVER_SERVE_FROM_SUB_PATH=false
+      - GF_SECURITY_DISABLE_GRAVATAR=true
+      - GF_SECURITY_STRICT_TRANSPORT_SECURITY=false
+      - GF_SECURITY_CONTENT_SECURITY_POLICY=false
+      - GF_USERS_VIEWERS_CAN_EDIT=true
+      - GF_USERS_VIEWERS_CAN_MAKE_EDITS=true
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
       - ./grafana/dashboards:/var/lib/grafana/dashboards
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
     restart: unless-stopped
     networks:
       - monitoring
