--- a/monitoring/grafana/grafana.ini
+++ b/monitoring/grafana/grafana.ini
@@ -5,6 +5,16 @@ cookie_secure = false
 disable_gravatar = true
 strict_transport_security = false
 content_security_policy = false
+allow_embedding = true
+cookie_samesite = none
+cookie_secure = false
+
+[security.cors]
+enabled = true
+allow_credentials = true
+allowed_origins = *
+allowed_methods = GET,POST,PUT,DELETE,OPTIONS
+allowed_headers = *
 
 [server]
 root_url = http://localhost:3000
