--- a/monitoring/grafana/grafana.ini
+++ b/monitoring/grafana/grafana.ini
@@ -5,9 +5,7 @@ cookie_secure = false
 disable_gravatar = true
 strict_transport_security = false
 content_security_policy = false
-allow_embedding = true
-cookie_samesite = none
-cookie_secure = false
+disable_initial_admin_creation = false
 
 [security.cors]
 enabled = true
@@ -24,6 +22,11 @@ serve_from_sub_path = false
 viewers_can_edit = true
 viewers_can_make_edits = true
 allow_sign_up = false
+allow_org_create = false
+default_theme = light
+
+[auth]
+disable_signout_menu = false
 
 [auth.anonymous]
 enabled = false
