--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -21,8 +21,8 @@ spec:
         ports:
         - containerPort: 80
         volumeMounts:
-        - name: nginx-logs
-          mountPath: /var/log/app/board-service/nginx
+        - name: app-logs
+          mountPath: /var/log/app
         livenessProbe:
           httpGet:
             path: /health
@@ -42,51 +42,9 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "100m"
-      
-      - name: vector-sidecar
-        image: timberio/vector:0.35.0-alpine
-        ports:
-        - containerPort: 8686
-        env:
-        - name: POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: CONTAINER_NAME
-          value: "vector-sidecar"
-        volumeMounts:
-        - name: nginx-logs
-          mountPath: /var/log/app/board-service/nginx
-        - name: vector-config
-          mountPath: /etc/vector
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "50m"
-          limits:
-            memory: "128Mi"
-            cpu: "100m"
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8686
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8686
-          initialDelaySeconds: 5
-          periodSeconds: 5
       
       volumes:
-      - name: nginx-logs
-        persistentVolumeClaim:
-          claimName: nginx-logs-pvc
-      - name: vector-config
-        configMap:
-          name: vector-sidecar-config
+      - name: app-logs
+        hostPath:
+          path: /var/log/app
+          type: DirectoryOrCreate
